# scouting-script-2024

./: .gitignore  README.md  main.py  output.xlsx  process_data.py  pyproject.toml  scratchpad.py  script.py
data/: Field Scouting Form Crescendo.csv  New Test Field Data.csv  New Test Pit Data.csv  Pit Scouting Form - Crescendo.csv
src/majora/: __init__.py  config.py  council.py  filtering.py  generate.py  load.py  match.py  pits.py  stats.py  team.py  util.py
